fix: fix alignment on top menu and change introduction text to main instead of header

--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,27 @@
   padding-right: 10%;
 }
 
+.container-title {
+  margin-top: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 1.5em;
+}
+
+.container-title2 {
+  margin-top: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 0.9em;
+}
+
 .card {
   padding: 1.5em;
   box-shadow: 1px 2px 0 rgba(1, 0, 0, 0.05);
   border: 1px solid red;
-  border-radius: 1em;
+  border-radius: 0.3em;
   width: 350px;
   height: 480px;
 }
@@ -42,7 +58,7 @@
   aspect-ratio: 50/50;
   width: 100%;
   height: 50%;
-  border-radius: 0.25em;
+  border-radius: 0.05em;
 }
 
 h2 {
@@ -50,6 +66,38 @@ h2 {
   margin-bottom: 0.25em;
   font-weight: 700;
   font-size: 2em;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar-logo {
+  width: 3em;
+  height: 3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:active {
+  color: red;
+}
+
+a:hover {
+  color: red;
+}
+
+.navbar-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* 
 .flex {
